@@ -24,8 +24,6 @@
           </div>
         </div>
         <div class="span6">
-          <a href="#" class="cancel-upload">Cancel</a>
-          &nbsp; &nbsp;
           <b><%= file_percent %>%</b>
           <% if (typeof(bytes_loaded) != "undefined" ){ %>
           (<%= bytes_loaded %>/<%= bytes_size %> bytes uploaded)
