@@ -29,7 +29,7 @@
 	      <div id="container" style="padding-top: 5px;">
 	        <input readonly type="text" name="uploaded_file" id="id_uploaded_file">
 	        <button class="btn" id="id_uploaded_file_button">Select</button>
-	        <div id="filelist"></div>
+	        <div><div id="filelist"></div><a href="#" class="cancel-upload" style="display: none">Cancel</a></div>
 	      </div>
 	    </div>
         <div class="controls hide" id="autoupload_container">
